--- a/src/App/components/main-nav-menu/main-nav.css
+++ b/src/App/components/main-nav-menu/main-nav.css
@@ -2,3 +2,8 @@
   display: flex;
   justify-content: space-between;
 }
+.icons {
+  display: flex;
+  width: 40px;
+  justify-content: space-between;
+}
