--- a/src/App/components/main-nav-menu/main-nav.css
+++ b/src/App/components/main-nav-menu/main-nav.css
@@ -7,3 +7,7 @@
   width: 40px;
   justify-content: space-between;
 }
+.verticalPosition {    
+  writing-mode: vertical-rl;
+  text-orientation: upright;
+}
